--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,13 @@ jobs:
   build:
     # This is a *private* build container.
     # See docs/github_actions.md for more information.
-    container: ghcr.io/my/game-build:main
-
+    container: ghcr.io/hyperhaxstudios/djh2-build:main
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         # Add game versions here
-        version: [GAMEID]
+        version: [SWBE52]
 
     steps:
     # Checkout the repository
